--- a/rust-api/Cargo.toml
+++ b/rust-api/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0.51"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
 env_logger = "0.7.1"
+num-complex = "0.4.2"
